# stock_updater_rs

./: .gitignore  Cargo.toml  dax_list.txt
src/: error_def.rs  lib.rs  main.rs  ohlc.rs
