[package]
name = "updater"
version = "0.1.0"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.0"
chrono = "0.4"
error-chain = "0.12"
reqwest = "0.9"
scraper = "0.10"
csv = "1.1"
