[package]
name = "updater"
version = "0.1.0"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusticsom = { git = "https://github.com/avinashshenoy97/RusticSOM.git", version = "1.1.0" }
#rusticsom = { git = "https://github.com/gin66/RusticSOM.git", branch = "master" }
log = "0.4"
simple_logger = "1.0"
chrono = "0.4"
chrono-tz = "0.5"
error-chain = "0.12"
reqwest = "0.9"
scraper = "0.10"
csv = "1.1"
ndarray = "0.11"
dirs = "2.0"
svg = "0.6"
image = "0.21"
plotters = { git = "https://github.com/38/plotters.git", branch = "master", features = ["cairo"]}

gdk = "^0.11.0"
glib = "^0.8.0"
gtk = "^0.7.0"
gtk-test = "^0.4"
gio = "0.7"

relm = "0.17"
relm-derive = "0.17"
rand = "^0.5.1"
